--- a/PA.Sof/guia.html
+++ b/PA.Sof/guia.html
@@ -10,7 +10,7 @@
 
   <header>
     <nav>
-      <img src="ChatGPT Image 10 may 2025, 18_25_48.png" alt="Logo Aqua Pure" class="logo">
+      <img src="logo.png" alt="Logo Aqua Pure" class="logo">
       <ul class="nav-links">
         <li><a href="inicio.html">Inicio</a></li>
         <li><a href="guia.html">Guías</a></li>
@@ -22,7 +22,8 @@
             <li><a href="#">Dónde Trabajamos</a></li>
           </ul>
         </li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="#productos">Productos</a></li>
+        <li><a href="#contacto">Contacto</a></li>
       </ul>
       <div class="auth-buttons">
         <a href="#" class="btn">Iniciar Sesión</a>
@@ -128,7 +129,9 @@
         <h3>Reflexión Final</h3>
         <p>El agua es un recurso esencial y limitado. Cuidarla es fundamental para la vida y el equilibrio ambiental.</p>
         <div class="meta-ods">
-          <img src="ods.png" alt="ODS 6 Logo" class="ods-logo">
+          <img src="ods6.png" alt="ODS 6 Logo" class="ods-logo">
+          <img src="ods11.png" alt="ODS 11 Logo" class="ods-logo">
+          <img src="ods12.png" alt="ODS 12 Logo" class="ods-logo">
           <p>Estas acciones están alineadas con el <strong>Objetivo de Desarrollo Sostenible 6</strong> de la ONU, que busca garantizar agua limpia y saneamiento para todos antes del 2030.</p>
         </div>
       </div>
