--- a/PA.Sof/inicio.html
+++ b/PA.Sof/inicio.html
@@ -3,65 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Aqua-Pure</title>
-  <link rel="stylesheet" href="inicio.css">
-</head>
+  <link rel="stylesheet" href="guia.css">
+  <title>Aqua Pure - Cuidado del Agua</title>
+  </head>
 <body>
-  <nav>
-    <div class="logo">
-      <img src="logo.png" alt="Aqua-Pure Logo">
-    </div>
-    <ul class="nav-links">
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#sabias-que">¿Sabías que…?</a></li>
-      <li><a href="#productos">Productos</a></li>
-      <li><a href="#contacto">Contacto</a></li>
-    </ul>
-    <div class="auth-buttons">
-      <a href="#login" class="btn">Iniciar sesión</a>
-      <a href="#register" class="btn">Registrarse</a>
-    </div>
-  </nav>
 
-  <section id="inicio" class="sabias-que">
-    <h1>¿Sabías que…?</h1>
-    <p>
-      Más del 25% de los colombianos no tienen acceso adecuado a agua potable, y muchas comunidades rurales dependen de fuentes contaminadas que ponen en riesgo su salud. <strong>Aqua-Pure</strong> nace para transformar esta realidad, brindando soluciones prácticas de saneamiento del agua para todos.
-    </p>
-  </section>
-
-  <main>
-    <section id="productos" class="seccion">
-      <h2>Productos</h2>
-      <div class="contenido">
-        <p>Conoce nuestros productos diseñados para mejorar el acceso al agua potable en todo tipo de entornos, desde hogares hasta comunidades rurales.</p>
-        <!-- Aquí puedes agregar los productos -->
+  <header>
+    <nav>
+      <img src="logo.png" alt="Logo Aqua Pure" class="logo">
+      <ul class="nav-links">
+        <li><a href="inicio.html">Inicio</a></li>
+        <li><a href="guia.html">Guías</a></li>
+        <li><a href="#">Quiénes Somos</a>
+          <ul class="sub-menu">
+            <li><a href="#">Nuestra Visión</a></li>
+            <li><a href="#">Organización</a></li>
+            <li><a href="#">Cómo Trabajamos</a></li>
+            <li><a href="#">Dónde Trabajamos</a></li>
+          </ul>
+        </li>
+        <li><a href="#productos">Productos</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+      <div class="auth-buttons">
+        <a href="#" class="btn">Iniciar Sesión</a>
+        <a href="#" class="btn">Registrarse</a>
       </div>
-    </section>
-
-    <section id="contacto" class="seccion">
-      <h2>Contacto</h2>
-      <div class="contenido">
-        <p>¿Tienes alguna pregunta o inquietud? Contáctanos a través de los siguientes medios.</p>
-        <!-- Formulario de contacto -->
-        <form>
-          <input type="text" placeholder="Tu nombre" required>
-          <input type="email" placeholder="Tu email" required>
-          <textarea placeholder="Tu mensaje" required></textarea>
-          <button type="submit" class="btn">Enviar mensaje</button>
-        </form>
-      </div>
-    </section>
-  </main>
-
+    </nav>
+  </header>
+  
   <footer>
-    <p>&copy; 2025 Aqua-Pure. Todos los derechos reservados.</p>
+    <p>© 2025 Aqua Pure - Todos los derechos reservados</p>
+    <p>Comprometidos con la conservación del agua y el medio ambiente</p>
     <div class="social-links">
-      <a href="https://www.facebook.com" target="_blank">Facebook</a>
-      <a href="https://www.twitter.com" target="_blank">Twitter</a>
-      <a href="https://www.instagram.com" target="_blank">Instagram</a>
+      <a href="#">Facebook</a> | 
+      <a href="#">Twitter</a> | 
+      <a href="#">Instagram</a> | 
+      <a href="#">YouTube</a>
     </div>
   </footer>
+
 </body>
 </html>
