--- a/PA.Sof/guia.html
+++ b/PA.Sof/guia.html
@@ -14,7 +14,7 @@
       <ul class="nav-links">
         <li><a href="inicio.html">Inicio</a></li>
         <li><a href="guia.html">Guías</a></li>
-        <li><a href="#">Quiénes Somos</a>
+        <li><a href="">Quiénes Somos</a>
           <ul class="sub-menu">
             <li><a href="#">Nuestra Visión</a></li>
             <li><a href="#">Organización</a></li>
@@ -22,8 +22,8 @@
             <li><a href="#">Dónde Trabajamos</a></li>
           </ul>
         </li>
-        <li><a href="#productos">Productos</a></li>
-        <li><a href="#contacto">Contacto</a></li>
+        <li><a href="foro.html">Foro</a></li>
+        <li><a href="">Contacto</a></li>
       </ul>
       <div class="auth-buttons">
         <a href="#" class="btn">Iniciar Sesión</a>
