--- a/PA.Sof/inicio.html
+++ b/PA.Sof/inicio.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="guia.css">
-  <title>Aqua Pure - Cuidado del Agua</title>
-  </head>
+  <link rel="stylesheet" href="inicio.css">
+  <title>Aqua Pure - Inicio</title>
+</head>
 <body>
 
   <header>
@@ -14,7 +14,8 @@
       <ul class="nav-links">
         <li><a href="inicio.html">Inicio</a></li>
         <li><a href="guia.html">Guías</a></li>
-        <li><a href="#">Quiénes Somos</a>
+        <li>
+          <a href="#">Quiénes Somos</a>
           <ul class="sub-menu">
             <li><a href="#">Nuestra Visión</a></li>
             <li><a href="#">Organización</a></li>
@@ -22,8 +23,8 @@
             <li><a href="#">Dónde Trabajamos</a></li>
           </ul>
         </li>
-        <li><a href="#productos">Productos</a></li>
-        <li><a href="#contacto">Contacto</a></li>
+        <li><a href="foro.html">Foro</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
       <div class="auth-buttons">
         <a href="#" class="btn">Iniciar Sesión</a>
@@ -31,14 +32,37 @@
       </div>
     </nav>
   </header>
-  
+
+  <main>
+    <div class="importancia-agua">
+      <h2>¿Por qué es importante cuidar el agua?</h2>
+      <img src="agua.png" alt="Imagen de cuidado del agua" class="imagen-agua">
+      <p>
+        El agua es esencial para la vida. Sin ella, los seres humanos, los animales y las plantas no podrían sobrevivir. Cuidarla significa proteger nuestra salud, nuestra seguridad alimentaria y nuestros ecosistemas.
+      </p>
+      <p>
+        Su uso responsable nos permite tener acceso al agua potable, regar cultivos, generar energía y mantener limpios nuestros espacios. Además, es vital para el saneamiento e higiene.
+      </p>
+      <p>
+        Si no la cuidamos, enfrentaremos escasez, enfermedades, pérdida de biodiversidad y conflictos por el acceso. La contaminación y el desperdicio agravan estos problemas, poniendo en riesgo el bienestar de millones de personas.
+      </p>
+    </div>
+
+    <div class="meta-ods">
+      <img src="ods6.png" alt="ODS 6 Logo" class="ods-logo">
+      <img src="ods11.png" alt="ODS 11 Logo" class="ods-logo">
+      <img src="ods12.png" alt="ODS 12 Logo" class="ods-logo">
+      <p>Estas acciones están alineadas con el <strong>Objetivo de Desarrollo Sostenible 6</strong> de la ONU, que busca garantizar agua limpia y saneamiento para todos antes del 2030.</p>
+    </div>
+  </main>
+
   <footer>
     <p>© 2025 Aqua Pure - Todos los derechos reservados</p>
     <p>Comprometidos con la conservación del agua y el medio ambiente</p>
     <div class="social-links">
-      <a href="#">Facebook</a> | 
-      <a href="#">Twitter</a> | 
-      <a href="#">Instagram</a> | 
+      <a href="#">Facebook</a>
+      <a href="#">Twitter</a>
+      <a href="#">Instagram</a>
       <a href="#">YouTube</a>
     </div>
   </footer>
