--- a/PA.Sof/foro.html
+++ b/PA.Sof/foro.html
@@ -23,7 +23,7 @@
           </ul>
         </li>
         <li><a href="foro.html">Foro</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
       <div class="auth-buttons">
         <a href="#" class="btn">Iniciar Sesión</a>
