--- a/PA.Sof/guia.html
+++ b/PA.Sof/guia.html
@@ -8,13 +8,14 @@
   </head>
 <body>
 
-  <header>
+ <header>
     <nav>
       <img src="logo.png" alt="Logo Aqua Pure" class="logo">
       <ul class="nav-links">
         <li><a href="inicio.html">Inicio</a></li>
         <li><a href="guia.html">Guías</a></li>
-        <li><a href="">Quiénes Somos</a>
+        <li>
+          <a href="#">Quiénes Somos</a>
           <ul class="sub-menu">
             <li><a href="#">Nuestra Visión</a></li>
             <li><a href="#">Organización</a></li>
@@ -23,7 +24,7 @@
           </ul>
         </li>
         <li><a href="foro.html">Foro</a></li>
-        <li><a href="">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
       <div class="auth-buttons">
         <a href="#" class="btn">Iniciar Sesión</a>
@@ -31,7 +32,6 @@
       </div>
     </nav>
   </header>
-  
   <main>
     <div class="contenido">
       <section class="intro">
