--- a/PA.Sof.v2/contacto.html
+++ b/PA.Sof.v2/contacto.html
@@ -9,31 +9,30 @@
 </head>
 <body>
 
-  <header>
+ <header>
     <nav>
       <img src="logo.png" alt="Aqua Pure logo representando la conservación del agua" class="logo" loading="lazy">
       <ul class="nav-links">
-        <li><a href="inicio.html">Inicio</a></li>
-        <li><a href="guia.html">Guías</a></li>
+        <li><a href="inicio.php">Inicio</a></li>
+        <li><a href="guia.php">Guías</a></li>
         <li>
           <a href="#" aria-haspopup="true" aria-expanded="false">Quiénes Somos</a>
           <ul class="sub-menu" role="menu">
-            <li><a href="vision.html" role="menuitem">Nuestra Visión</a></li>
-            <li><a href="organizacion.html" role="menuitem">Organización</a></li>
-            <li><a href="comotrabajamos.html" role="menuitem">Cómo Trabajamos</a></li>
-            <li><a href="dondetrabajamos.html" role="menuitem">Dónde Trabajamos</a></li>
+            <li><a href="vision.php" role="menuitem">Nuestra Visión</a></li>
+            <li><a href="organizacion.php" role="menuitem">Organización</a></li>
+            <li><a href="comotrabajamos.php" role="menuitem">Cómo Trabajamos</a></li>
+            <li><a href="dondetrabajamos.php" role="menuitem">Dónde Trabajamos</a></li>
           </ul>
         </li>
-        <li><a href="foro.html">Foro</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="foro.php">Foro</a></li>
+        <li><a href="contacto.php">Contacto</a></li>
       </ul>
       <div class="auth-buttons">
-        <a href="iniciarsesion.html" class="btn">Iniciar Sesión</a>
-        <a href="registrarse.html" class="btn">Registrarse</a>
+        <a href="iniciarsesion.php" class="btn">Iniciar Sesión</a>
+        <a href="registrarse.php" class="btn">Registrarse</a>
       </div>
     </nav>
   </header>
-
   <main>
     <div class="contact-container">
       <h1 class="contact-heading">Contáctanos</h1>
