--- a/PA.Sof/guia.html
+++ b/PA.Sof/guia.html
@@ -7,28 +7,27 @@
   <title>Aqua Pure - Cuidado del Agua</title>
   </head>
 <body>
-
- <header>
+  <header>
     <nav>
-      <img src="logo.png" alt="Logo Aqua Pure" class="logo">
+      <img src="logo.png" alt="Aqua Pure logo representando la conservación del agua" class="logo" loading="lazy">
       <ul class="nav-links">
         <li><a href="inicio.html">Inicio</a></li>
         <li><a href="guia.html">Guías</a></li>
         <li>
-          <a href="#">Quiénes Somos</a>
-          <ul class="sub-menu">
-            <li><a href="#">Nuestra Visión</a></li>
-            <li><a href="#">Organización</a></li>
-            <li><a href="#">Cómo Trabajamos</a></li>
-            <li><a href="#">Dónde Trabajamos</a></li>
+          <a href="#" aria-haspopup="true" aria-expanded="false">Quiénes Somos</a>
+          <ul class="sub-menu" role="menu">
+            <li><a href="vision.html" role="menuitem">Nuestra Visión</a></li>
+            <li><a href="organizacion.html" role="menuitem">Organización</a></li>
+            <li><a href="comotrabajamos.html" role="menuitem">Cómo Trabajamos</a></li>
+            <li><a href="dondetrabajamos.html" role="menuitem">Dónde Trabajamos</a></li>
           </ul>
         </li>
         <li><a href="foro.html">Foro</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
       <div class="auth-buttons">
-        <a href="#" class="btn">Iniciar Sesión</a>
-        <a href="#" class="btn">Registrarse</a>
+        <a href="iniciarsesion.html" class="btn">Iniciar Sesión</a>
+        <a href="registrarse.html" class="btn">Registrarse</a>
       </div>
     </nav>
   </header>
