--- a/PA.Sof/registrarse.html
+++ b/PA.Sof/registrarse.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aqua Pure - Foro de la Comunidad</title>
-  <link rel="stylesheet" href="foro.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="registrarse.css">
+  <title>Aqua Pure - Registrarse</title>
 </head>
 <body>
   <header>
@@ -32,28 +32,31 @@
     </nav>
   </header>
 
-
   <main>
     <div class="contenido">
       <div class="intro">
-        <h1>Foro de la Comunidad</h1>
-        <p>Comparte ideas, dudas y sugerencias con otros usuarios.</p>
+        <h1>Registrarse</h1>
       </div>
-
-      <div class="foro-container">
-        <div class="foro-mensajes" id="foro-mensajes">
-          <!-- Aquí se verán los mensajes -->
-          <div class="mensaje">
-            <strong>Usuario1:</strong> ¡Hola a todos! ¿Cómo podemos ahorrar más agua?
+      <div class="formulario">
+        <form>
+          <div class="campo">
+            <label for="nombre">Nombre</label>
+            <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required>
           </div>
-          <div class="mensaje">
-            <strong>Usuario2:</strong> Una idea es reutilizar el agua de la lavadora para el baño.
+          <div class="campo">
+            <label for="email">Correo Electrónico</label>
+            <input type="email" id="email" name="email" placeholder="Ingresa tu correo" required>
           </div>
-        </div>
-
-        <form class="foro-form" id="foro-form">
-          <textarea id="mensaje" rows="3" placeholder="Escribe tu mensaje aquí..." required></textarea>
-          <button type="submit">Enviar</button>
+          <div class="campo">
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
+          </div>
+          <div class="campo">
+            <label for="confirm-password">Confirmar Contraseña</label>
+            <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirma tu contraseña" required>
+          </div>
+          <button type="submit" class="btn-form">Registrarse</button>
+          <p class="enlace">¿Ya tienes una cuenta? <a href="iniciarsesion.html">Inicia sesión aquí</a></p>
         </form>
       </div>
     </div>
@@ -69,25 +72,5 @@
       <a href="#">YouTube</a>
     </div>
   </footer>
-
-  <script>
-    const form = document.getElementById('foro-form');
-    const mensajes = document.getElementById('foro-mensajes');
-
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      const input = document.getElementById('mensaje');
-      const texto = input.value.trim();
-
-      if (texto) {
-        const nuevo = document.createElement('div');
-        nuevo.classList.add('mensaje');
-        nuevo.innerHTML = '<strong>Tú:</strong> ' + texto;
-        mensajes.appendChild(nuevo);
-        mensajes.scrollTop = mensajes.scrollHeight;
-        input.value = '';
-      }
-    });
-  </script>
 </body>
 </html>
